# ssh.cpp

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
.github/workflows/: build-release.yml
include/: scc_app.h  ssh_connection_scanner.h
src/: main.cc  scc_app.cc  ssh_connection_scanner.cc
tests/: CMakeLists.txt  test_ssh_connection_scanner.cc
